# ray-tracer-cpp

./: CMakeLists.txt  Readme.md
include/: camera.h  color.h  light.h  mesh.h  object.h  plane.h  ray.h  sphere.h  vector3.h  world.h
src/: CMakeLists.txt  camera.cpp  color.cpp  light.cpp  main.cpp  mesh.cpp  object.cpp  plane.cpp  ray.cpp  sphere.cpp  vector3.cpp  world.cpp
